--- a/portfolio.html
+++ b/portfolio.html
@@ -116,8 +116,8 @@
 										</li>
 										<li class="current"><a href="portfolio.html">Portfolio</a>
 											<ul>
-												<li class="current"><a href="portfolio.html">2 column</a></li>
-												<li><a href="portfolio3.html">3 column</a></li>
+												<li><a href="portfolio.html">2 column</a></li>
+												<li class="current"><a href="portfolio3.html">3 column</a></li>
 												<li ><a href="portfolio4.html">4 column</a></li>
 												<li><a href="portfolio-single.html">Portfolio single</a></li>
 												<li><a href="#">3D level menu</a>
@@ -181,7 +181,7 @@
 	<div class="container filter-portfolio clearfix">
 		<ul id="portfolio" class="clearfix">
 		<!-- PORTFOLIO ITEM -->
-			<li data-id="id-1" data-type="category1" class="eight columns m-bot-35">
+			<li data-id="id-1" data-type="category1" class="one-third column m-bot-35">
 						<div class="hover-item">
 							<div class="view view-first">
 								<img src="images/content/port-2-1.jpg" alt="Ipsum" >
@@ -203,7 +203,7 @@
 						</div>
 			</li>
 		<!-- PORTFOLIO ITEM -->
-			<li data-id="id-2" data-type="category2" class="eight columns m-bot-35">
+			<li data-id="id-2" data-type="category2" class="one-third column m-bot-35">
 						<div class="hover-item">
 							<div class="view view-first">
 								<img src="images/content/port-2-2.jpg" alt="Ipsum" >
@@ -225,7 +225,7 @@
 						</div>
 			</li>
 		<!-- PORTFOLIO ITEM -->
-			<li data-id="id-3" data-type="category3" class="eight columns m-bot-35">
+			<li data-id="id-3" data-type="category3" class="one-third column m-bot-35">
 						<div class="hover-item">
 							<div class="view view-first">
 								<img src="images/content/port-2-3.jpg" alt="Ipsum" >
@@ -247,7 +247,7 @@
 						</div>
 			</li>
 		<!-- PORTFOLIO ITEM -->
-			<li data-id="id-4" data-type="category1" class="eight columns m-bot-35">
+			<li data-id="id-4" data-type="category1" class="one-third column m-bot-35">
 						<div class="hover-item">
 							<div class="view view-first">
 								<img src="images/content/port-2-4.jpg" alt="Ipsum" >
@@ -269,7 +269,7 @@
 						</div>
 			</li>
 		<!-- PORTFOLIO ITEM -->
-			<li data-id="id-5" data-type="category2" class="eight columns m-bot-35">
+			<li data-id="id-5" data-type="category2" class="one-third column m-bot-35">
 						<div class="hover-item">
 							<div class="view view-first">
 								<img src="images/content/port-2-5.jpg" alt="Ipsum" >
@@ -291,7 +291,7 @@
 						</div>
 			</li>
 		<!-- PORTFOLIO ITEM -->
-			<li data-id="id-6" data-type="category3" class="eight columns m-bot-35">
+			<li data-id="id-6" data-type="category3" class="one-third column m-bot-35">
 						<div class="hover-item">
 							<div class="view view-first">
 								<img src="images/content/port-2-6.jpg" alt="Ipsum" >
@@ -312,7 +312,73 @@
 							</div>
 						</div>
 			</li>	
-
+		<!-- PORTFOLIO ITEM -->
+			<li data-id="id-7" data-type="category1" class="one-third column m-bot-35">
+						<div class="hover-item">
+							<div class="view view-first">
+								<img src="images/content/port-2-7.jpg" alt="Ipsum" >
+								<div class="mask"></div>	
+								<div class="abs">
+									<a href="images/content/port-2-7.jpg" class="lightbox zoom info"></a><a href="portfolio-single.html" class="link info"></a>
+								</div>	
+							</div>
+							<div class="lw-item-caption-container">
+								<a class="a-invert" href="portfolio-single.html" >
+									<div class="item-title-main-container clearfix">
+										<div class="item-title-text-container">
+											<span class="bold">Craes</span> Nustro
+										</div>
+									</div>
+								</a>
+								<div class="item-caption">web design</div>
+							</div>
+						</div>
+			</li>
+		<!-- PORTFOLIO ITEM -->
+			<li data-id="id-8" data-type="category2" class="one-third column m-bot-35">
+						<div class="hover-item">
+							<div class="view view-first">
+								<img src="images/content/port-2-8.jpg" alt="Ipsum" >
+								<div class="mask"></div>	
+								<div class="abs">
+									<a href="images/content/port-2-8.jpg" class="lightbox zoom info"></a><a href="portfolio-single.html" class="link info"></a>
+								</div>	
+							</div>
+							<div class="lw-item-caption-container">
+								<a class="a-invert" href="portfolio-single.html" >
+									<div class="item-title-main-container clearfix">
+										<div class="item-title-text-container">
+											<span class="bold">Lorem</span> Ipsum
+										</div>
+									</div>
+								</a>
+								<div class="item-caption">tehnology</div>
+							</div>
+						</div>
+			</li>
+		<!-- PORTFOLIO ITEM -->
+			<li data-id="id-9" data-type="category3" class="one-third column m-bot-35">
+						<div class="hover-item">
+							<div class="view view-first">
+								<img src="images/content/port-2-9.jpg" alt="Ipsum" >
+								<div class="mask"></div>	
+								<div class="abs">
+									<a href="images/content/port-2-9.jpg" class="lightbox zoom info"></a><a href="portfolio-single.html" class="link info"></a>
+								</div>	
+							</div>
+							<div class="lw-item-caption-container">
+								<a class="a-invert" href="portfolio-single.html" >
+									<div class="item-title-main-container clearfix">
+										<div class="item-title-text-container">
+											<span class="bold">Nustro</span> Mauris
+										</div>
+									</div>
+								</a>
+								<div class="item-caption">photography </div>
+							</div>
+						</div>
+			</li>
+		
 
 		</ul>
 	</div>	
