--- a/404.html
+++ b/404.html
@@ -1,18 +1,8 @@
 <!DOCTYPE html>
-<!--
-
-	Theme Name: Solana
-	Description: HTML/CSS Template
-	Author: Abcgomel 
-	Version: 1.0
-	Designed & Coded by Abcgomel
-	
--->
 <html>
   <head>
-    <title>Solana - Responsive Multipurpose HTML Template</title>
+    <title>CV. Sentosa Anara Nusantara</title>
     <meta charset="utf-8" />
-
     <meta name="robots" content="index, follow" />
     <meta name="keywords" content="" />
     <meta name="description" content="" />
@@ -21,20 +11,13 @@
       content="width=device-width, initial-scale=1, maximum-scale=1"
     />
     <link rel="shortcut icon" href="favicon.ico" />
-
-    <!-- CSS begin -->
-
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" type="text/css" href="css/skeleton.css" />
-
     <link
       rel="stylesheet"
       type="text/css"
       href="css/jquery.fancybox-1.3.4.css"
     />
-    <link rel="stylesheet" href="css/switcher/style.css" />
-    <link rel="stylesheet" href="css/layout/wide.css" id="layout" />
-    <link rel="stylesheet" href="css/colors/yellow.css" id="colors" />
 
     <!--[if lte IE 8
       ]><link rel="stylesheet" type="text/css" href="css/ie-warning.css"
@@ -50,152 +33,122 @@
       ]><link rel="stylesheet" type="text/css" href="css/ei8fix.css"
     /><![endif]-->
 
-    <!-- CSS end -->
+    <link rel="stylesheet" type="text/css" href="css/flexslider.css" />
 
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
   </head>
+
   <body>
     <div id="wrap" class="boxed">
       <div class="grey-bg">
-        <!-- Grey bg  -->
+	  <!-- Grey bg  -->
+	<!--[if lte IE 7]>
+		<div id="ie-container">
+		<div id="ie-cont-close">
+			<a
+			href="#"
+			onclick='javascript&#058;this.parentNode.parentNode.style.display="none"; return false;'
+			><img
+				src="images/ie-warning-close.jpg"
+				style="border: none"
+				alt="Close"
+			/></a>
+		</div>
+		<div id="ie-cont-content">
+			<div id="ie-cont-warning">
+			<img src="images/ie-warning.jpg" alt="Warning!" />
+			</div>
+			<div id="ie-cont-text">
+			<div id="ie-text-bold">You are using an outdated browser</div>
+			<div id="ie-text">
+				For a better experience using this site, please upgrade to a
+				modern web browser.
+			</div>
+			</div>
+			<div id="ie-cont-brows">
+			<a href="http://www.firefox.com" target="_blank"
+				><img
+				src="images/ie-warning-firefox.jpg"
+				alt="Download Firefox"
+			/></a>
+			<a href="http://www.opera.com/download/" target="_blank"
+				><img src="images/ie-warning-opera.jpg" alt="Download Opera"
+			/></a>
+			<a href="http://www.apple.com/safari/download/" target="_blank"
+				><img
+				src="images/ie-warning-safari.jpg"
+				alt="Download Safari"
+			/></a>
+			<a href="http://www.google.com/chrome" target="_blank"
+				><img
+				src="images/ie-warning-chrome.jpg"
+				alt="Download Google Chrome"
+			/></a>
+			</div>
+		</div>
+		</div>
+	<![endif]-->
 
-        <!--[if lte IE 7]>
-          <div id="ie-container">
-            <div id="ie-cont-close">
-              <a
-                href="#"
-                onclick='javascript&#058;this.parentNode.parentNode.style.display="none"; return false;'
-                ><img
-                  src="images/ie-warning-close.jpg"
-                  style="border: none"
-                  alt="Close"
-              /></a>
-            </div>
-            <div id="ie-cont-content">
-              <div id="ie-cont-warning">
-                <img src="images/ie-warning.jpg" alt="Warning!" />
-              </div>
-              <div id="ie-cont-text">
-                <div id="ie-text-bold">You are using an outdated browser</div>
-                <div id="ie-text">
-                  For a better experience using this site, please upgrade to a
-                  modern web browser.
-                </div>
-              </div>
-              <div id="ie-cont-brows">
-                <a href="http://www.firefox.com" target="_blank"
-                  ><img
-                    src="images/ie-warning-firefox.jpg"
-                    alt="Download Firefox"
-                /></a>
-                <a href="http://www.opera.com/download/" target="_blank"
-                  ><img src="images/ie-warning-opera.jpg" alt="Download Opera"
-                /></a>
-                <a href="http://www.apple.com/safari/download/" target="_blank"
-                  ><img
-                    src="images/ie-warning-safari.jpg"
-                    alt="Download Safari"
-                /></a>
-                <a href="http://www.google.com/chrome" target="_blank"
-                  ><img
-                    src="images/ie-warning-chrome.jpg"
-                    alt="Download Google Chrome"
-                /></a>
-              </div>
-            </div>
-          </div>
-        <![endif]-->
+	  <header id="header">
+		<div class="container clearfix">
+		<div class="sixteen columns header-position">
+			<div class="header-container m-top-30 clearfix">
+			<div class="header-logo-container">
+				<div class="logo-container">
+				<a href="index.html" class="logo" rel="home" title="Home">
+					<img src="images/cv-san-logo-200x128.png" alt="CV. SAN" />
+				</a>
+				</div>
+			</div>
 
-        <header id="header">
-          <div class="container clearfix">
-            <div class="sixteen columns header-position">
-              <div class="header-container m-top-30 clearfix">
-                <div class="header-logo-container">
-                  <div class="logo-container">
-                    <a href="index.html" class="logo" rel="home" title="Home">
-                      <img src="images/cv-san-logo-200x128.png" alt="CV. SAN" />
-                    </a>
-                  </div>
-                </div>
+			<!-- Menu -->
+			<div class="header-menu-container right">
+				<nav id="main-nav">
+				<ul class="sf-menu clearfix">
+					<li class="current">
+					<a href="index.html">BERANDA</a>
+					</li>
 
-                <!-- Menu -->
-                <div class="header-menu-container right">
-                  <nav id="main-nav">
-                    <ul class="sf-menu clearfix">
-                      <li class="current">
-                        <a href="index.html">BERANDA</a>
-                      </li>
+					<li>
+					<a href="profil.html">Profil</a>
+					</li>
 
-                      <li>
-                        <a href="profil.html">Profil</a>
-                      </li>
+					<li>
+					<a href="layanan.html">Layanan</a>
+					</li>
 
-                      <li>
-                        <a href="layanan.html">Layanan</a>
-                      </li>
+					<li>
+					<a href="dokumentasi.html">Dokumentasi</a>
+					</li>
 
-                      <li>
-                        <a href="dokumentasi.html">Dokumentasi</a>
-                      </li>
+					<li>
+					<a href="produk.html">Produk</a>
+					</li>
 
-                      <li>
-                        <a href="produk.html">Produk</a>
-                      </li>
+					<li><a href="hubungi-kami.html">Hubungi Kami</a></li>
+				</ul>
+				</nav>
+			</div>
+			</div>
+		</div>
+		</div>
+	  </header>
 
-                      <li><a href="hubungi-kami.html">Hubungi Kami</a></li>
-                    </ul>
-                  </nav>
-                </div>
-              </div>
-            </div>
-          </div>
-        </header>
-
-        <!-- PAGE TITLE -->
-        <div class="container m-bot-35 clearfix">
-          <div class="sixteen columns">
-            <div class="page-title-container clearfix">
-              <h1 class="page-title">
-                <span class="bold">OUPS!</span> NOT FOUND!
-              </h1>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- Grey bg end -->
-
-      <!-- 404 -->
-      <div class="container m-bot-100 m-top-80 clearfix">
-        <div class="eight columns">
-          <div class="error404-numb">404</div>
-        </div>
-        <div class="eight columns">
-          <div class="error404-text">
-            THE PAGE<br />
-            CANNOT<br />
-            BE FOUND
-          </div>
-        </div>
-      </div>
-
-      <!-- 404 2 -->
-
-      <div class="light-grey-bg m-top-30">
-        <div class="container clearfix pad-t-b-30">
-          <div class="sixteen columns content-container-white">
-            <div class="error404-main-text">
-              <h2>
-                <span class="bold">You can</span> view our
-                <span class="bold"><a href="portfolio.html">portfolio</a></span
-                >, or read the
-                <span class="bold"><a href="blog.html">blog</a></span>
-              </h2>
-            </div>
-          </div>
-        </div>
-      </div>
+	<!-- 404 -->
+	<div class="container m-bot-100 m-top-80 clearfix">
+		<div class="eight columns">
+		<div class="error404-numb">404</div>
+		</div>
+		<div class="eight columns">
+			<div class="error404-text">
+			Maaf,<br />
+			Halaman<br />
+			Tidak Tersedia
+			</div>
+		</div>
+	</div>
 
       <footer>
         <div class="footer-content-bg">
