update blok layanan perusahaan

--- a/index.html
+++ b/index.html
@@ -195,9 +195,8 @@
                   <div class="ca-content">
                     <h2 class="ca-main">Perencanaan</h2>
                     <h3 class="ca-sub">
-                      Membuat perencanaan dari Rencana Anggaran Biaya (RAB).
+                      Membuat perencanaan dari Rencana Anggaran Biaya (RAB) ...
                     </h3>
-                    <br />
                   </div>
                 </a>
               </div>
@@ -215,8 +214,7 @@
                   <div class="ca-content">
                     <h2 class="ca-main">Pelaksanaan</h2>
                     <h3 class="ca-sub">
-                      Melaksanakan pekerjaan dari sipil umum sampai Fasilitas
-                      perlengkapan Jalan.
+                      Melaksanakan pekerjaan dari sipil umum ...
                     </h3>
                   </div>
                 </a>
@@ -235,8 +233,7 @@
                   <div class="ca-content">
                     <h2 class="ca-main">Pengawasan</h2>
                     <h3 class="ca-sub">
-                      Melaksanakan Pengawasan Pekerjaan sipil umum dan Fasilitas
-                      perlengkapan Jalan.
+                      Melaksanakan Pengawasan Pekerjaan sipil umum ...
                     </h3>
                   </div>
                 </a>
@@ -255,9 +252,8 @@
                   <div class="ca-content">
                     <h2 class="ca-main">Pengadaan Barang</h2>
                     <h3 class="ca-sub">
-                      Pengadaaan Barang umum (Genset, Furniture dll).
+                      Pengadaaan Barang umum (Genset, Furniture dll) ...
                     </h3>
-                    <br />
                   </div>
                 </a>
               </div>
