--- a/index.html
+++ b/index.html
@@ -195,8 +195,7 @@
                   <div class="ca-content">
                     <h2 class="ca-main">Perencanaan</h2>
                     <h3 class="ca-sub">
-                      Membuat perencanaan dari Rencana Anggaran Biaya (RAB) ...
-                    </h3>
+                      Membuat perencanaan dari Rencana Anggaran Biaya...
                   </div>
                 </a>
               </div>
@@ -214,7 +213,7 @@
                   <div class="ca-content">
                     <h2 class="ca-main">Pelaksanaan</h2>
                     <h3 class="ca-sub">
-                      Melaksanakan pekerjaan dari sipil umum ...
+                      Melaksanakan pekerjaan dari sipil umum...
                     </h3>
                   </div>
                 </a>
@@ -233,7 +232,7 @@
                   <div class="ca-content">
                     <h2 class="ca-main">Pengawasan</h2>
                     <h3 class="ca-sub">
-                      Melaksanakan Pengawasan Pekerjaan sipil umum ...
+                      Melaksanakan Pengawasan Pekerjaan sipil umum...
                     </h3>
                   </div>
                 </a>
