update layanan lagi

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                   <div class="ca-content">
                     <h2 class="ca-main">Pengawasan</h2>
                     <h3 class="ca-sub">
-                      Melaksanakan Pengawasan Pekerjaan sipil umum...
+                      Pengawasan Pekerjaan sipil umum...
                     </h3>
                   </div>
                 </a>
