--- a/index.html
+++ b/index.html
@@ -194,8 +194,7 @@
                   </div>
                   <div class="ca-content">
                     <h2 class="ca-main">Perencanaan</h2>
-                    <h3 class="ca-sub">
-                      Membuat perencanaan dari Rencana Anggaran Biaya...
+                    <h3 class="ca-sub"></h3>
                   </div>
                 </a>
               </div>
@@ -212,9 +211,7 @@
                   </div>
                   <div class="ca-content">
                     <h2 class="ca-main">Pelaksanaan</h2>
-                    <h3 class="ca-sub">
-                      Melaksanakan pekerjaan dari sipil umum...
-                    </h3>
+                    <h3 class="ca-sub"></h3>
                   </div>
                 </a>
               </div>
@@ -231,9 +228,7 @@
                   </div>
                   <div class="ca-content">
                     <h2 class="ca-main">Pengawasan</h2>
-                    <h3 class="ca-sub">
-                      Pengawasan Pekerjaan sipil umum...
-                    </h3>
+                    <h3 class="ca-sub"></h3>
                   </div>
                 </a>
               </div>
@@ -250,9 +245,7 @@
                   </div>
                   <div class="ca-content">
                     <h2 class="ca-main">Pengadaan Barang</h2>
-                    <h3 class="ca-sub">
-                      Pengadaaan Barang umum (Genset, Furniture dll) ...
-                    </h3>
+                    <h3 class="ca-sub"></h3>
                   </div>
                 </a>
               </div>
