--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
               <ul class="slides">
                 <li
                   style="
-                    background: url(images/sliders/slider-1/slider-san-2050x666-1.jpg)
+                    background: url(images/sliders/slider-san-2050x666-1.jpg)
                       no-repeat;
                     background-position: 50% 0;
                   "
@@ -159,11 +159,53 @@
                       </div>
 
                       <img
-                        src="images/sliders/slider-1/slider-san-item-392x237-1.png"
+                        src="images/sliders/slider-san-item-392x237-1.png"
                         class="item"
                         alt="slide-item"
                         data-topimage="21%"
                       />
+                    </div>
+                  </div>
+                </li>
+
+                <li
+                  style="
+                    background: url(images/sliders/slider-san-2050x666-2.jpg)
+                      no-repeat;
+                    background-position: 50% 0;
+                  "
+                >
+                  <div class="container">
+                    <div class="sixteen columns contain">
+                      <h2 data-toptitle="35%">Produk dan Layanan</h2>
+                      <div class="links" data-bottomlinks="45%">
+                        <a
+                          class="button medium r-m-plus r-m-full"
+                          href="profil.html"
+                          >Selengkapnya</a
+                        >
+                      </div>
+                    </div>
+                  </div>
+                </li>
+
+                <li
+                  style="
+                    background: url(images/sliders/slider-san-2050x666-3.jpg)
+                      no-repeat;
+                    background-position: 50% 0;
+                  "
+                >
+                  <div class="container">
+                    <div class="sixteen columns contain">
+                      <h2 data-toptitle="35%">Dokumentasi</h2>
+                      <div class="links" data-bottomlinks="45%">
+                        <a
+                          class="button medium r-m-plus r-m-full"
+                          href="profil.html"
+                          >Selengkapnya</a
+                        >
+                      </div>
                     </div>
                   </div>
                 </li>
