update home menu dan profil

--- a/profil.html
+++ b/profil.html
@@ -92,7 +92,7 @@
 
         <header id="header">
           <div class="container clearfix">
-            <div class="sixteen columns header-position">
+            <div class="sixteen columns">
               <div class="header-container m-top-30 clearfix">
                 <div class="header-logo-container">
                   <div class="logo-container">
@@ -102,15 +102,15 @@
                   </div>
                 </div>
 
-                <!-- Menu -->
                 <div class="header-menu-container right">
+                  <!-- TOP MENU -->
                   <nav id="main-nav">
                     <ul class="sf-menu clearfix">
-                      <li class="current">
+                      <li>
                         <a href="index.html">Beranda</a>
                       </li>
 
-                      <li>
+                      <li class="current">
                         <a href="profil.html">Profil</a>
                       </li>
 
@@ -131,136 +131,239 @@
           </div>
         </header>
 
-        <!-- SLIDER -->
-        <div class="slider-1 clearfix">
-          <div class="flex-container">
-            <div class="flexslider loading">
-              <ul class="slides">
-                <li
-                  style="
-                    background: url(images/sliders/slider-san-2050x666-1.jpg)
-                      no-repeat;
-                    background-position: 50% 0;
-                  "
-                >
-                  <div class="container">
-                    <div class="sixteen columns contain">
-                      <h2 data-toptitle="35%">CV. Sentosa Anara Nusantara</h2>
-                      <div class="links" data-bottomlinks="45%">
-                        <a
-                          class="button medium r-m-plus r-m-full"
-                          href="profil.html"
-                          >Profil Perusahaan CV. SAN</a
-                        >
-                      </div>
+        <div class="container m-bot-35 clearfix">
+          <div class="sixteen columns">
+            <div class="page-title-container clearfix">
+              <h1 class="page-title">Profil Perusahaan</h1>
+            </div>
+          </div>
+        </div>
+      </div>
 
-                      <img
-                        src="images/sliders/slider-san-item-392x237-1.png"
-                        class="item"
-                        alt="slide-item"
-                        data-topimage="21%"
-                      />
-                    </div>
-                  </div>
-                </li>
+      <!-- Tentang Kami -->
+      <div class="container m-bot-35 clearfix">
+        <div class="eight columns">
+          <div class="img-about">
+            <img class="" alt="about" src="images/logo/logo-profil.jpg" />
+          </div>
+        </div>
+        <div class="eight columns profil">
+          <div class="caption-container-main m-bot-30">
+            <div class="caption-text-container">Sekilas Tentang Kami</div>
+            <div class="content-container-white caption-bg"></div>
+          </div>
+          <p>
+            <strong>CV. Sentosa Anara Nusantara</strong> Hadir sebagai perushaan
+            Kontrkator yang bergerak dibidang jasa sipil, jasa perlengkapan
+            jalan dan perdagangan umum (perlengkapan keselamatan lalu lintas
+            jalan, perlengkapan alat K3 dll).
+          </p>
+          <p>
+            <strong>CV. Sentosa Anara Nusantara</strong> menangani pekerjaan
+            dari perencanaan, pelaksanaan sampai dengan pemeliharaan.
+          </p>
+          <p>
+            <strong>CV. Sentosa Anara Nusantara</strong> berdiri pada tahun
+            2023, tetapi sudah mempunyai pengalaman pekerjaan jasa perlengkapan
+            jalan di sektor swasta maupun pemerintah.
+          </p>
+        </div>
+      </div>
 
-                <li
-                  style="
-                    background: url(images/sliders/slider-san-2050x666-3.jpg)
-                      no-repeat;
-                    background-position: 50% 0;
-                  "
+      <!-- Visi dan Misi -->
+      <div class="container m-bot-35 clearfix">
+        <div class="sixteen columns profil">
+          <div class="caption-container-main m-bot-30">
+            <div class="caption-text-container">Visi dan Misi Perusahaan</div>
+            <div class="content-container-white caption-bg"></div>
+          </div>
+          <p>
+            <strong>VISI : </strong> Dari perusahaan kecil akan menjadi
+            perusahaan besar yang profesional sekaligus menjadi mitra yang dapat
+            diandalkan dalam bidang jasa kontraktor sipil umum, perlengkapan
+            jalan dan perdagangan umum.
+          </p>
+          <p>
+            <strong>MISI : </strong> Mengembangkan usaha penyedia jasa dan
+            perdagangan umum dengan tim internal yang handal dan profesional
+            agar mampu memberikan kontribusi dalam pembangunan ekomoni, sosial,
+            budaya dan sumber daya manusia baik dalam perusahaan maupun dalam
+            masyarakat global.
+          </p>
+        </div>
+      </div>
+
+	  <!-- Legalitas Perusahaan -->
+      <div class="container m-bot-35 clearfix">
+        <div class="row">
+          <div class="sixteen columns legalitas">
+            <div class="caption-container-main m-bot-30">
+              <div class="caption-text-container">LEGALITAS PERUSAHAAN</div>
+              <div class="content-container-white caption-bg"></div>
+            </div>
+            <ul id="toggle-view">
+              <li>
+                <h3 class="ui-accordion-header">
+                  <span class="link"></span>AKTA PENDIRIAN
+                </h3>
+                <div class="panel">
+                  <p>Nama Perusahaan : CV. SENTOSA ANARA NUSANTARA</p>
+					<p>No. Akta Pendirian : 10</p>
+					<p>Tanggal : 11 Juli 2023</p>
+					<p>Notaris : Victory, S.H.,M.Kn.</p>
+					<p>SK Kemenkumham : AHU-0044622-AH.01.14 Tahun 2023</p>
+                  </p>
+                </div>
+              </li>
+              
+              <li>
+                <h3 class="ui-accordion-header">
+                  <span class="link"></span>DIREKTUR
+                </h3>
+                <div class="panel">
+                  <p>Achmad Achsan Fauzi</p>
+				  <p>0821 1215 2464</p>
+                </div>
+              </li>
+
+              <li>
+                <h3 class="ui-accordion-header">
+                  <span class="link"></span>NOMOR INDUK BERUSAHA (NIB)
+                </h3>
+                <div class="panel">
+                  <p>Nomor Induk Berusaha (NIB) : 2007230174903</p>
+                </div>
+              </li>
+			  <li>
+                <h3 class="ui-accordion-header">
+                  <span class="link"></span>NOMOR POKOK WAJIB PAJAK (NPWP)
+                </h3>
+                <div class="panel">
+                  <p>Nomor Pokok Wajib Pajak (NPWP) : 39.694.395.3-008.000</p>
+                </div>
+              </li>
+			  <li>
+                <h3 class="ui-accordion-header">
+                  <span class="link"></span>SURAT PENGUKUHAN PENGUSAHA KENA PAJAK (SPPKP)
+                </h3>
+                <div class="panel">
+                  <p>Pengukuhan Perusahan Kena Pajak (PPKP) : S-199/PKP/KKP.200903/2023</p>
+                </div>
+              </li>
+			  <li>
+                <h3 class="ui-accordion-header">
+                  <span class="link"></span>REKOM KEMENTERIAN PERHUBUNGAN (TDBUPPJ)
+                </h3>
+                <div class="panel">
+                  <p>Rekom Kementerian Perehubungan (TDBUPPJ) : KP-DJPD 7700 Tahun 2023</p>
+                </div>
+              </li>
+			  <li>
+                <h3 class="ui-accordion-header">
+                  <span class="link"></span>SERTIFIKAT BADAN USAHA (SBU)
+                </h3>
+                <div class="panel">
+                  <p>Sertifikat Badan Usaha (SBU) : .........................................</p>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+	  <!-- Download Profil Perusahaan -->
+      <div class="dark-grey-bg">
+        <div class="container clearfix dark-grey-bg">
+          <div class="sixteen columns">
+            <div class="buy-container clearfix">
+              <div class="buy-img-container">
+                <img src="images/icon-plane.png" alt="buy" />
+              </div>
+              <div class="buy-text-container">
+                <div class="buy-text">
+                  <h2>CV. Sentosa Anara Nusantara</h2>
+                  <span class="buy-now-slogan">Download Profil dan Lampiran Legalitas Perusahaan</span>
+                </div>
+              </div>
+              <div class="button-buy-container">
+                <a
+                  class=""
+                  target="_blank"
+                  href="https://drive.google.com/file/d/1ZhXLAx69FtEVet1-MuYeUwtT71x3_1Zh/view?usp=drive_link"
+                  >Download</a
                 >
-                  <div class="container">
-                    <div class="sixteen columns contain">
-                      <h2 data-toptitle="35%">Dokumentasi dan Produk</h2>
-                      <div class="links" data-bottomlinks="45%">
-                        <a
-                          class="button medium r-m-plus r-m-full"
-                          href="dokumentasi-produk.html"
-                          >Selengkapnya</a
-                        >
-                      </div>
-                    </div>
-                  </div>
-                </li>
-              </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+	  <!-- Layanan Perusahaan -->
+      <div class="container clearfix" id="layanan">
+        <div class="sixteen columns">
+          <div class="caption-container-main m-bot-30">
+            <div class="caption-text-container">Layanan Perusahaan</div>
+            <div class="content-container-white caption-bg"></div>
+          </div>
+        </div>
+
+        <div class="four columns">
+          <div class="content-container-white m-bot-35 clearfix">
+            <img alt="" src="images/layanan/icon-layanan-157x140-1.png" />
+            <div class="lw-item-caption-container">
+              <div class="team-name">
+                <h5>Perencanaan</h5>
+                <span>Membuat perencanaan dari Rencana Anggaran Biaya (RAB),
+					Gambar untuk pekerjaan sipil umum dan Fasilitas
+					perlengkapan Jalan seperti (Marka Jalan, Lampu Penerangan
+					Jalan Umum (LPJU), Alat Pemberi Isyarat Lampu Lalu Lintas
+					(APILL), Rambu Lalu Lintas dll.</span>
+              </div>
             </div>
           </div>
         </div>
 
-        <!-- Layanan Perusahaan -->
-        <div class="container clearfix m-bot-35 min-m-top-75">
-          <div class="sixteen columns m-bot-15">
-            <div class="">
-              <div class="block-r-m">
-                <a class="button medium r-m-plus r-m-full" href="profil.html#layanan"
-                  >Layanan Perusahaan</a
-                >
+        <div class="four columns">
+          <div class="content-container-white m-bot-35 clearfix">
+            <img alt="" src="images/layanan/icon-layanan-157x140-2.png" />
+            <div class="lw-item-caption-container">
+              <div class="team-name">
+                <h5>Pelaksanaan</h5>
+                <span>Melaksanakan pekerjaan dari sipil umum sampai Fasilitas
+					perlengkapan Jalan seperti (Marka Jalan, Lampu Penerangan
+					Jalan Umum (LPJU), Alat Pemberi Isyarat Lampu Lalu Lintas
+					(APILL), Rambu Lalu Lintas dll.</span>
               </div>
             </div>
+          </div>
+        </div>
 
-            <div class="block-4-col m-bot-20 ca-menu">
-              <div class="block-1-content-container">
-                <a class="clearfix" href="profil.html#layanan">
-                  <div class="ca-icon">
-                    <img
-                      src="images/layanan/icon-layanan-157x140-1.png"
-                      alt="icon-comp"
-                    />
-                  </div>
-                  <div class="ca-content">
-                    <h2 class="ca-main">Perencanaan</h2>
-                  </div>
-                </a>
+        <div class="four columns">
+          <div class="content-container-white m-bot-35 clearfix">
+            <img alt="" src="images/layanan/icon-layanan-157x140-3.png" />
+            <div class="lw-item-caption-container">
+              <div class="team-name">
+                <h5>Pengawasan</h5>
+                <span>Melaksanakan Pengawasan Pekerjaan sipil umum dan Fasilitas
+					perlengkapan Jalan seperti (Marka Jalan, Lampu Penerangan
+					Jalan Umum (LPJU), Alat Pemberi Isyarat Lampu Lalu Lintas
+					(APILL), Rambu Lalu Lintas dll.</span>
               </div>
             </div>
+          </div>
+        </div>
 
-            <div class="block-4-col m-bot-20 ca-menu">
-              <div class="block-2-content-container">
-                <a class="clearfix" href="profil.html#layanan">
-                  <div class="ca-icon">
-                    <img
-                      src="images/layanan/icon-layanan-157x140-2.png"
-                      alt="icon-gears"
-                    />
-                  </div>
-                  <div class="ca-content">
-                    <h2 class="ca-main">Pelaksanaan</h2>
-                  </div>
-                </a>
-              </div>
-            </div>
-
-            <div class="block-4-col m-bot-20 ca-menu">
-              <div class="block-3-content-container">
-                <a class="clearfix" href="profil.html#layanan">
-                  <div class="ca-icon">
-                    <img
-                      src="images/layanan/icon-layanan-157x140-3.png"
-                      alt="icon-plane"
-                    />
-                  </div>
-                  <div class="ca-content">
-                    <h2 class="ca-main">Pengawasan</h2>
-                  </div>
-                </a>
-              </div>
-            </div>
-
-            <div class="block-4-col m-bot-20 ca-menu">
-              <div class="block-2-content-container">
-                <a class="clearfix" href="profil.html#layanan">
-                  <div class="ca-icon">
-                    <img
-                      src="images/layanan/icon-layanan-157x140-4.png"
-                      alt="icon-gears"
-                    />
-                  </div>
-                  <div class="ca-content">
-                    <h2 class="ca-main">Pengadaan Barang</h2>
-                  </div>
-                </a>
+        <div class="four columns">
+          <div class="content-container-white m-bot-35 clearfix">
+            <img alt="" src="images/layanan/icon-layanan-157x140-4.png" />
+            <div class="lw-item-caption-container">
+              <div class="team-name">
+                <h5>Pengadaan Barang</h5>
+                <span>Pengadaan Barang umum (Genset, Furniture dll),
+					Barang untuk pekerjaan Fasilitas Perlengkapan Jalan
+					(Marka Thermoplastik, Marka Coldplastik, Lampu PJU,
+					Lampu APILL/ Traffic Light, Warning Light,
+					Paku Marka Jalan, Rabu Lalu Lintas Dll, K3.</span>
               </div>
             </div>
           </div>
@@ -288,7 +391,10 @@
             <li class="four columns">
               <div class="hover-item">
                 <div class="view view-first">
-                  <img src="images/content/dokumentasi-800x491-1.jpg" alt="Lampu Penerangan Jalan Umum" />
+                  <img
+                    src="images/content/dokumentasi-800x491-1.jpg"
+                    alt="Lampu Penerangan Jalan Umum"
+                  />
                   <div class="mask"></div>
                   <div class="abs">
                     <a
@@ -315,7 +421,10 @@
             <li class="four columns">
               <div class="hover-item">
                 <div class="view view-first">
-                  <img src="images/content/dokumentasi-800x491-2.jpg" alt="Warning Light" />
+                  <img
+                    src="images/content/dokumentasi-800x491-2.jpg"
+                    alt="Warning Light"
+                  />
                   <div class="mask"></div>
                   <div class="abs">
                     <a
@@ -342,7 +451,10 @@
             <li class="four columns">
               <div class="hover-item">
                 <div class="view view-first">
-                  <img src="images/content/dokumentasi-800x491-3.jpg" alt="Traffic Light/APILL" />
+                  <img
+                    src="images/content/dokumentasi-800x491-3.jpg"
+                    alt="Traffic Light/APILL"
+                  />
                   <div class="mask"></div>
                   <div class="abs">
                     <a
@@ -369,7 +481,10 @@
             <li class="four columns">
               <div class="hover-item">
                 <div class="view view-first">
-                  <img src="images/content/produk-800x491-1.jpg" alt="Paku Marka Jalan (Tempered Glass)" />
+                  <img
+                    src="images/content/produk-800x491-1.jpg"
+                    alt="Paku Marka Jalan (Tempered Glass)"
+                  />
                   <div class="mask"></div>
                   <div class="abs">
                     <a
@@ -383,7 +498,9 @@
                   <a class="a-invert" href="produk.html">
                     <div class="item-title-main-container clearfix">
                       <div class="item-title-text-container">
-                        <span class="bold">Paku Marka Jalan (Tempered Glass)</span>
+                        <span class="bold"
+                          >Paku Marka Jalan (Tempered Glass)</span
+                        >
                       </div>
                     </div>
                   </a>
@@ -396,7 +513,10 @@
             <li class="four columns">
               <div class="hover-item">
                 <div class="view view-first">
-                  <img src="images/content/produk-800x491-2.jpg" alt="Traffic Cone" />
+                  <img
+                    src="images/content/produk-800x491-2.jpg"
+                    alt="Traffic Cone"
+                  />
                   <div class="mask"></div>
                   <div class="abs">
                     <a
@@ -423,7 +543,10 @@
             <li class="four columns">
               <div class="hover-item">
                 <div class="view view-first">
-                  <img src="images/content/produk-800x491-3.jpg" alt="Rambu Lalu Lintas Portable" />
+                  <img
+                    src="images/content/produk-800x491-3.jpg"
+                    alt="Rambu Lalu Lintas Portable"
+                  />
                   <div class="mask"></div>
                   <div class="abs">
                     <a
@@ -641,8 +764,7 @@
     <script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
     <script type="text/javascript" src="js/superfish.js"></script>
     <script type="text/javascript" src="js/jquery-ui.min.js"></script>
-    <script src="js/jquery.flexslider.js"></script>
-    <script src="js/flex-slider.js"></script>
+
     <script type="text/javascript" src="js/jquery.jcarousel.js"></script>
     <script
       type="text/javascript"
