perbaikan logo dan menu 404

--- a/404.html
+++ b/404.html
@@ -100,26 +100,22 @@
 				<nav id="main-nav">
 				<ul class="sf-menu clearfix">
 					<li class="current">
-					<a href="index.html">BERANDA</a>
-					</li>
+            <a href="index.html">Beranda</a>
+          </li>
 
-					<li>
-					<a href="profil.html">Profil</a>
-					</li>
+          <li>
+            <a href="profil.html">Profil</a>
+          </li>
 
-					<li>
-					<a href="layanan.html">Layanan</a>
-					</li>
+          <li>
+            <a href="dokumentasi.html">Dokumentasi</a>
+          </li>
 
-					<li>
-					<a href="dokumentasi.html">Dokumentasi</a>
-					</li>
+          <li>
+            <a href="produk.html">Produk</a>
+          </li>
 
-					<li>
-					<a href="produk.html">Produk</a>
-					</li>
-
-					<li><a href="hubungi-kami.html">Hubungi Kami</a></li>
+          <li><a href="hubungi-kami.html">Hubungi Kami</a></li>
 				</ul>
 				</nav>
 			</div>
@@ -224,16 +220,12 @@
               <div class="footer-menu-container">
                 <nav class="clearfix" id="footer-nav">
                   <ul class="footer-menu">
-                    <li>
-                      <a href="index.html">BERANDA</a>
+                    <li class="current">
+                      <a href="index.html">Beranda</a>
                     </li>
 
                     <li>
                       <a href="profil.html">Profil</a>
-                    </li>
-
-                    <li>
-                      <a href="layanan.html">Layanan</a>
                     </li>
 
                     <li>
