update halaman dokumentasi dan produk

--- a/profil.html
+++ b/profil.html
@@ -391,14 +391,11 @@
             <li class="four columns">
               <div class="hover-item">
                 <div class="view view-first">
-                  <img
-                    src="images/content/dokumentasi-800x491-1.jpg"
-                    alt="Lampu Penerangan Jalan Umum"
-                  />
+                  <img src="images/dokumentasi/dokumentasi-800x491-1.jpg" alt="Lampu Penerangan Jalan Umum" />
                   <div class="mask"></div>
                   <div class="abs">
                     <a
-                      href="images/content/dokumentasi-800x491-1.jpg"
+                      href="images/dokumentasi/dokumentasi-800x491-1.jpg"
                       class="lightbox zoom info"
                     ></a
                     ><a href="dokumentasi.html" class="link info"></a>
@@ -421,14 +418,11 @@
             <li class="four columns">
               <div class="hover-item">
                 <div class="view view-first">
-                  <img
-                    src="images/content/dokumentasi-800x491-2.jpg"
-                    alt="Warning Light"
-                  />
+                  <img src="images/dokumentasi/dokumentasi-800x491-2.jpg" alt="Warning Light" />
                   <div class="mask"></div>
                   <div class="abs">
                     <a
-                      href="images/content/dokumentasi-800x491-2.jpg"
+                      href="images/dokumentasi/dokumentasi-800x491-2.jpg"
                       class="lightbox zoom info"
                     ></a
                     ><a href="dokumentasi.html" class="link info"></a>
@@ -451,14 +445,11 @@
             <li class="four columns">
               <div class="hover-item">
                 <div class="view view-first">
-                  <img
-                    src="images/content/dokumentasi-800x491-3.jpg"
-                    alt="Traffic Light/APILL"
-                  />
+                  <img src="images/dokumentasi/dokumentasi-800x491-3.jpg" alt="Traffic Light/APILL" />
                   <div class="mask"></div>
                   <div class="abs">
                     <a
-                      href="images/content/dokumentasi-800x491-3.jpg"
+                      href="images/dokumentasi/dokumentasi-800x491-3.jpg"
                       class="lightbox zoom info"
                     ></a
                     ><a href="dokumentasi.html" class="link info"></a>
@@ -481,14 +472,11 @@
             <li class="four columns">
               <div class="hover-item">
                 <div class="view view-first">
-                  <img
-                    src="images/content/produk-800x491-1.jpg"
-                    alt="Paku Marka Jalan (Tempered Glass)"
-                  />
+                  <img src="images/produk/produk-800x491-1.jpg" alt="Paku Marka Jalan (Tempered Glass)" />
                   <div class="mask"></div>
                   <div class="abs">
                     <a
-                      href="images/content/produk-800x491-1.jpg"
+                      href="images/produk/produk-800x491-1.jpg"
                       class="lightbox zoom info"
                     ></a
                     ><a href="produk.html" class="link info"></a>
@@ -498,9 +486,7 @@
                   <a class="a-invert" href="produk.html">
                     <div class="item-title-main-container clearfix">
                       <div class="item-title-text-container">
-                        <span class="bold"
-                          >Paku Marka Jalan (Tempered Glass)</span
-                        >
+                        <span class="bold">Paku Marka Jalan (Tempered Glass)</span>
                       </div>
                     </div>
                   </a>
@@ -513,14 +499,11 @@
             <li class="four columns">
               <div class="hover-item">
                 <div class="view view-first">
-                  <img
-                    src="images/content/produk-800x491-2.jpg"
-                    alt="Traffic Cone"
-                  />
+                  <img src="images/produk/produk-800x491-2.jpg" alt="Traffic Cone" />
                   <div class="mask"></div>
                   <div class="abs">
                     <a
-                      href="images/content/produk-800x491-2.jpg"
+                      href="images/produk/produk-800x491-2.jpg"
                       class="lightbox zoom info"
                     ></a
                     ><a href="produk.html" class="link info"></a>
@@ -543,14 +526,11 @@
             <li class="four columns">
               <div class="hover-item">
                 <div class="view view-first">
-                  <img
-                    src="images/content/produk-800x491-3.jpg"
-                    alt="Rambu Lalu Lintas Portable"
-                  />
+                  <img src="images/produk/produk-800x491-3.jpg" alt="Rambu Lalu Lintas Portable" />
                   <div class="mask"></div>
                   <div class="abs">
                     <a
-                      href="images/content/produk-800x491-3.jpg"
+                      href="images/produk/produk-800x491-3.jpg"
                       class="lightbox zoom info"
                     ></a
                     ><a href="produk.html" class="link info"></a>
