--- a/hubungi-kami.html
+++ b/hubungi-kami.html
@@ -166,7 +166,7 @@
         <div class="sixteen columns m-bot-25">
           <div class="caption-container-main m-bot-30">
             <div class="caption-text-container">
-              <span class="bold">CONTACT</span> INFO
+              <span class="bold">ALAMAT</span> PERUSAHAAN
             </div>
             <div class="content-container-white caption-bg"></div>
           </div>
