update link dan css

--- a/index.html
+++ b/index.html
@@ -173,11 +173,32 @@
                 >
                   <div class="container">
                     <div class="sixteen columns contain">
-                      <h2 data-toptitle="35%">Dokumentasi dan Produk</h2>
+                      <h2 data-toptitle="35%">Dokumentasi</h2>
                       <div class="links" data-bottomlinks="45%">
                         <a
                           class="button medium r-m-plus r-m-full"
-                          href="dokumentasi-produk.html"
+                          href="dokumentasi.html"
+                          >Selengkapnya</a
+                        >
+                      </div>
+                    </div>
+                  </div>
+                </li>
+
+                <li
+                  style="
+                    background: url(images/sliders/slider-san-2050x666-5.jpg)
+                      no-repeat;
+                    background-position: 50% 0;
+                  "
+                >
+                  <div class="container">
+                    <div class="sixteen columns contain">
+                      <h2 data-toptitle="35%">Produk</h2>
+                      <div class="links" data-bottomlinks="45%">
+                        <a
+                          class="button medium r-m-plus r-m-full"
+                          href="produk.html"
                           >Selengkapnya</a
                         >
                       </div>
